<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uso.ctecacademy.ui.perfil.PerfilFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_horario"
        android:name="com.uso.ctecacademy.ui.horario.HorarioFragment"
        android:label="@string/horario"
        tools:layout="@layout/fragment_horario" />

    <fragment
        android:id="@+id/nav_notas"
        android:name="com.uso.ctecacademy.ui.notas.NotasFragment"
        android:label="@string/Notas"
        tools:layout="@layout/fragment_notas" />
    <fragment
        android:id="@+id/nav_notificacion"
        android:name="com.uso.ctecacademy.ui.notificacion.NotificacionFragment"
        android:label="@string/Notificacion"
        tools:layout="@layout/fragment_notificacion" />
</navigation>